[package]
name = "knot-relay"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
dirs = "6.0.0"
futures = "0.3.32"
libp2p = { version = "0.56.0", features = ["relay", "quic", "noise", "yamux", "identify", "tokio", "macros", "tcp", "ping", "kad"] }
tokio = { version = "1.51.0", features = ["full"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
